commit css header

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,34 +1,31 @@
-@import url('https://fonts.googleapis.com/css?family=Orbitron:700|Roboto:300');
-
 header {
     z-index: 0;
+    position: fixed;
+    top: 0;
     display: flex;
 	justify-content: space-between;
-	align-items: baseline;
-    align-content: center;
     background-color: #ffffff;
-    border-bottom: 1px solid grey;
-    height: 9vh;
+    width: 100%;
+    padding-top: 3%;
 }
 
 #logo {
-    padding-left: 5%;
-    padding-top: 1%;
-    width: 100%;
+    margin: auto 5%;
     white-space: nowrap;
     font-family: 'Orbitron', sans-serif;
-    font-size: 1em;
     background: linear-gradient(to right, #30CFD0 0%, #330867 100%);
 	-webkit-background-clip: text;
 	-webkit-text-fill-color: transparent;
     text-decoration: none;
 }
 
-.button-menu {
+.toggle-button {
+    padding-top: 1vh;
+    margin: auto;
+    padding-right: 3vh;
     font-family: 'Roboto', sans-serif;
     font-size: 1.5em;
     background: none;
-    padding-left: 5%;
 }
 
 .leftie {
