--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,15 @@
+@import url('https://fonts.googleapis.com/css?family=Orbitron:700|Roboto:300');
+
 .App {
-  height: 100vh;
+  position: flex;
+  display: flex;
+	flex-direction: column;
+	flex-wrap: nowrap;
+	justify-content: center;
+	align-content: center;
 }
 
-@keyframes App-logo-spin {
+/* @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
-}
+} */
