--- a/src/components/Homepage/Homepage.css
+++ b/src/components/Homepage/Homepage.css
@@ -1,19 +1,26 @@
+
 .promise {
     background-image: url(https://i.imgur.com/kZn7d4b.jpg);
-    padding: 10vh 0 10vh 0;
 	background-size: 100% auto;
-	margin: 0;
+	margin-top: 23%;
+	height: 20%;
+	padding: 10% 0;
+	display: flex;
+	flex-direction: column;
+	flex-wrap: nowrap;
+	align-items: center;
+	align-content: center;
     font-family: 'Roboto', sans-serif;
     letter-spacing: 0.3rem;
-    font-size:3.2em;
+    font-size: 1.5em;
     color: #ffffff;
     text-transform: uppercase;
 }
 
 .verticalFlip{
+	margin: 5%;
 	display: flex;
     justify-content: center;
-    align-content: center;
 }
 .verticalFlip span{
 	animation: vertical 12.5s linear infinite 0s;
@@ -82,20 +89,20 @@
 }
 
 .cat-box {
-    margin-top: 5%;
+    margin-top: 3vh;
     font-family: 'Orbitron', sans-serif;
     letter-spacing: 0.2rem;
-    font-size:2em;
+    font-size:1em;
     color: #ffffff;
     text-align: center;
-    line-height: 600px; 
+    line-height:230px; 
     box-sizing: content-box;
     text-transform: uppercase;
     background-size: contain;
-    background-repeat: round;
+    background-repeat: no-repeat;
     border-radius: 16px;
-    width: 400px;
-    height: 332px;
+    width: 41vw;
+    height: 17vh;
 }
 
 .cat-1 {
