--- a/src/components/Homepage/Homepage.css
+++ b/src/components/Homepage/Homepage.css
@@ -89,34 +89,39 @@
 }
 
 .cat-box {
-    margin-top: 3vh;
-    font-family: 'Orbitron', sans-serif;
+	font-family: 'Orbitron', sans-serif;
+	margin-bottom: 1%;
+	background-color: #30CFD0;
     letter-spacing: 0.2rem;
     font-size:1em;
-    color: #ffffff;
-    text-align: center;
-    line-height:230px; 
-    box-sizing: content-box;
-    text-transform: uppercase;
+	color: #ffffff;
+	text-transform: uppercase;
+	text-align: end;
+	line-height: 16vh;
+	text-decoration: none;
     background-size: contain;
     background-repeat: no-repeat;
-    border-radius: 16px;
-    width: 41vw;
-    height: 17vh;
+	border-radius: 16px;
+	width: 100%;
+	height: 15vh;
 }
 
 .cat-1 {
-    background-image: url(./images/Outdoor.png);
+	background-image: url(./images/Outdoor.png);
+	padding-right: 18%
 }
 
 .cat-2 {
-    background-image: url(./images/Afterwork.png);
+	background-image: url(./images/Afterwork.png);
+	padding-right: 12%
 }
 
 .cat-3 {
-    background-image: url(./images/Clubbing.png);
+	background-image: url(./images/Clubbing.png);
+	padding-right: 17%
 }
 
 .cat-4 {
-    background-image: url(./images/Live.png);
+	background-image: url(./images/Live.png);
+	padding-right: 26%
 }
