--- a/src/components/Homepage/Homepage.css
+++ b/src/components/Homepage/Homepage.css
@@ -91,7 +91,7 @@
 .cat-box {
 	font-family: 'Orbitron', sans-serif;
 	margin-bottom: 1%;
-	background-color: #30CFD0;
+	background-color:#22bed6;
     letter-spacing: 0.2rem;
     font-size:1em;
 	color: #ffffff;
