--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -21,11 +21,42 @@ header {
 
 .toggle-button {
     padding-top: 1vh;
-    margin: auto;
-    padding-right: 3vh;
+    margin-right: 5vh;
     font-family: 'Roboto', sans-serif;
     font-size: 1.5em;
     background: none;
+    border: none;
+}
+
+.smooth {
+    animation-name: hop;
+    animation-duration: 2s; 
+}
+
+@keyframes hop {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 0.8;
+    } 
+}
+
+.menu-list {
+    position: fixed;
+    font-size: 1.5em;
+    width: 40%;
+    background: white;
+    list-style: none;
+    margin-top: 5%;
+    padding-left: 2px;
+    padding-top: 10px;
+    opacity: 0.8;
+}
+
+.list-font {
+    font-family: 'Orbitron', sans-serif;
+    padding: 10px 0;
 }
 
 .leftie {
@@ -39,6 +70,3 @@ header {
     text-transform: uppercase;
 }
 
-button {
-    border: none;
-}
