--- a/src/styles/_Homepage.scss
+++ b/src/styles/_Homepage.scss
@@ -106,22 +106,22 @@
 	height: 15vh;
 }
 
-.cat-1 {
-	background-image: url(./images/Outdoor.png);
-	padding-right: 18%
-}
+// .cat-1 {
+// 	background-image: url(./images/Outdoor.png);
+// 	padding-right: 18%
+// }
 
-.cat-2 {
-	background-image: url(./images/Afterwork.png);
-	padding-right: 12%
-}
+// .cat-2 {
+// 	background-image: url(./images/Afterwork.png);
+// 	padding-right: 12%
+// }
 
-.cat-3 {
-	background-image: url(./images/Clubbing.png);
-	padding-right: 17%
-}
+// .cat-3 {
+// 	background-image: url(./images/Clubbing.png);
+// 	padding-right: 17%
+// }
 
-.cat-4 {
-	background-image: url(./images/Live.png);
-	padding-right: 26%
-}
+// .cat-4 {
+// 	background-image: url(./images/Live.png);
+// 	padding-right: 26%
+// }
