commit thurs morning

--- a/src/styles/_Category.scss
+++ b/src/styles/_Category.scss
@@ -3,10 +3,10 @@
  }
  
  .event-block {
-     margin: 0;
-     background-color: white;
-     width: 50vw;
-     height: 86vh;
+    margin-top: 23%;
+    background-color: white;
+    width: 50vw;
+    height: 86vh;
  }
  
  .event-box {
