--- a/src/styles/_Reservations.scss
+++ b/src/styles/_Reservations.scss
@@ -3,18 +3,18 @@
 }
 
 .left-block {
-    margin: 0;
+    margin-top: 23%;
     background: linear-gradient(to bottom right, #37bdcc, #2f3483);
     padding: 10% 4%;
-    height: 50vh;
+    height: 80vh;
 }
 
 .reservation-title {
     margin:0;
     font-family: 'Roboto', sans-serif;
-    letter-spacing: 0.3rem;
+    letter-spacing: 2px;
     text-transform: uppercase;
-    font-size: 1em;
+    font-size: 6px;
     flex-wrap: wrap;
     padding-bottom: 20%;
     color: white;
@@ -22,12 +22,12 @@
 
 .profile-image {
     border-radius: 100%;
-    width: 13vw;
-    height: 25vh;
+    width: 28vw;
+    height: 15vh;
 }
 
 .right-block {
-    margin: 0; 
+    margin-top: 85px; 
     background-color: whitesmoke;
     width:100%;
 }
@@ -36,9 +36,7 @@
     text-align: left;
     color: grey;
     padding: 0% 4%;
-    font-family: 'Orbitron', sans-serif;
-    font-size: 1.3em;
-    border-bottom: 1px solid grey;
+    font-size: 9px;
 }
 
 .alert {
