--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@
   display: flex; }
 
 .event-block {
-  margin: 0;
+  margin-top: 23%;
   background-color: white;
   width: 50vw;
   height: 86vh; }
@@ -33,39 +33,18 @@
 .detailedInfo {
   display: none; }
 
-.hamburger {
-  padding: 15px 15px;
-  display: inline-block;
-  cursor: pointer;
-  transition-property: opacity, filter;
-  transition-duration: 0.15s;
-  transition-timing-function: linear;
-  font: inherit;
-  color: inherit;
-  text-transform: none;
-  background-color: transparent;
-  border: 0;
-  margin: 0;
-  overflow: visible; }
-
-.hamburger:hover {
-  opacity: 0.7; }
-
-.hamburger-box {
-  width: 40px;
-  height: 24px;
-  display: inline-block;
-  position: relative; }
+.burger-menu {
+  margin-right: 15vw; }
 
 .hamburger-inner {
   display: block;
-  top: 50%;
+  top: 55%;
   margin-top: -2px; }
 
 .hamburger-inner, .hamburger-inner::before, .hamburger-inner::after {
   width: 40px;
-  height: 4px;
-  background-color: #000;
+  height: 3.5px;
+  background-color: #636170;
   border-radius: 4px;
   position: absolute;
   transition-property: transform;
@@ -77,35 +56,10 @@
   display: block; }
 
 .hamburger-inner::before {
-  top: -10px; }
+  top: -8px; }
 
 .hamburger-inner::after {
-  bottom: -10px; }
-
-.hamburger--squeeze .hamburger-inner {
-  transition-duration: 0.075s;
-  transition-timing-function: cubic-bezier(0.55, 0.055, 0.675, 0.19); }
-
-.hamburger--squeeze .hamburger-inner::before {
-  transition: top 0.075s 0.12s ease, opacity 0.075s ease; }
-
-.hamburger--squeeze .hamburger-inner::after {
-  transition: bottom 0.075s 0.12s ease, transform 0.075s cubic-bezier(0.55, 0.055, 0.675, 0.19); }
-
-.hamburger--squeeze.is-active .hamburger-inner {
-  transform: rotate(45deg);
-  transition-delay: 0.12s;
-  transition-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1); }
-
-.hamburger--squeeze.is-active .hamburger-inner::before {
-  top: 0;
-  opacity: 0;
-  transition: top 0.075s ease, opacity 0.075s 0.12s ease; }
-
-.hamburger--squeeze.is-active .hamburger-inner::after {
-  bottom: 0;
-  transform: rotate(-90deg);
-  transition: bottom 0.075s ease, transform 0.075s 0.12s cubic-bezier(0.215, 0.61, 0.355, 1); }
+  bottom: -8px; }
 
 header {
   z-index: 0;
@@ -137,19 +91,25 @@ header {
     opacity: 0.8; } }
 
 .menu-list {
-  position: fixed;
-  font-size: 1.5em;
-  width: 40%;
+  position: absolute;
+  right: 0;
+  margin: 5vh 0;
+  padding: 10px;
+  font-size: 2em;
   background: white;
   list-style: none;
-  margin-top: 5%;
-  padding-left: 2px;
-  padding-top: 10px;
-  opacity: 0.8; }
-
-.list-font {
-  font-family: 'Orbitron', sans-serif;
-  padding: 10px 0; }
+  opacity: 0.9;
+  border-radius: 5%; }
+  .menu-list li {
+    margin: -4px;
+    padding-right: 10px;
+    padding-left: 5px;
+    text-align: right; }
+  .menu-list a {
+    font-family: 'Orbitron', sans-serif;
+    color: #636170;
+    font-size: 14px;
+    text-decoration: none; }
 
 .leftie {
   display: none; }
@@ -301,32 +261,66 @@ header {
   height: 100%;
   border-left: solid grey 1px; }
 
+.each-box a {
+  text-decoration: none; }
+
+.each-box p {
+  font-family: Orbitron, sans-serif;
+  font-size: 11px;
+  color: grey; }
+
+.each-box h6 {
+  margin: 0;
+  padding: 0;
+  font-family: Roboto;
+  font-weight: 300;
+  font-size: 12px;
+  color: grey; }
+
+.add-button {
+  font-family: Orbitron, sans-serif;
+  font-size: 10px;
+  color: grey;
+  float: right; }
+
+.delete-button {
+  font-family: Orbitron, sans-serif;
+  font-size: 10px;
+  color: grey;
+  float: right; }
+
+.pay-button {
+  font-family: Orbitron, sans-serif;
+  font-size: 10px;
+  color: grey;
+  float: left; }
+
 .reservation-flex {
   display: flex; }
 
 .left-block {
-  margin: 0;
+  margin-top: 23%;
   background: linear-gradient(to bottom right, #37bdcc, #2f3483);
   padding: 10% 4%;
-  height: 50vh; }
+  height: 80vh; }
 
 .reservation-title {
   margin: 0;
   font-family: 'Roboto', sans-serif;
-  letter-spacing: 0.3rem;
+  letter-spacing: 2px;
   text-transform: uppercase;
-  font-size: 1em;
+  font-size: 6px;
   flex-wrap: wrap;
   padding-bottom: 20%;
   color: white; }
 
 .profile-image {
   border-radius: 100%;
-  width: 13vw;
-  height: 25vh; }
+  width: 28vw;
+  height: 15vh; }
 
 .right-block {
-  margin: 0;
+  margin-top: 85px;
   background-color: whitesmoke;
   width: 100%; }
 
@@ -334,9 +328,7 @@ header {
   text-align: left;
   color: grey;
   padding: 0% 4%;
-  font-family: 'Orbitron', sans-serif;
-  font-size: 1.3em;
-  border-bottom: 1px solid grey; }
+  font-size: 9px; }
 
 .alert {
   font-family: 'Orbitron', sans-serif;
