--- a/src/App.scss
+++ b/src/App.scss
@@ -7,7 +7,7 @@
 @import "./styles/Header.scss";
 @import "./styles/Homepage.scss";
 @import "./styles/MapContainer.scss";
-@import "./styles/Reservation.scss";
+@import "./styles/EventBoxes.scss";
 @import "./styles/Reservations.scss";
 
 
