--- a/src/App.scss
+++ b/src/App.scss
@@ -9,6 +9,7 @@
 @import "./styles/MapContainer.scss";
 @import "./styles/EventBoxes.scss";
 @import "./styles/Reservations.scss";
+@import "./styles/AddEvent.scss";
 
 
 .App {
