--- a/src/styles/_MapContainer.scss
+++ b/src/styles/_MapContainer.scss
@@ -1,6 +1,6 @@
 .map-block {
-    width: 50%;
+    width: 100%;
     min-height: 200px;
     height: 100%;
-    border-left: solid grey 1px;
+    border-top: solid grey 1px;
  }
