--- a/src/App.scss
+++ b/src/App.scss
@@ -6,10 +6,10 @@
 @import "./styles/Hamburgers.scss";
 @import "./styles/Header.scss";
 @import "./styles/Homepage.scss";
-@import "./styles/MapContainer.scss";
 @import "./styles/EventBoxes.scss";
 @import "./styles/Reservations.scss";
 @import "./styles/AddEvent.scss";
+@import "./styles/Buttons.scss" ;
 
 
 .App {
