--- a/src/styles/_EventDetails.scss
+++ b/src/styles/_EventDetails.scss
@@ -26,3 +26,36 @@
         color: grey;
     }
 }
+
+.edit-box {
+    margin: 25% 5% 0 5%;
+    padding: 8px;
+    background-color: whitesmoke;
+    border-radius: 5%;
+
+    p {
+        font-family: 'Orbitron', sans-serif;
+        font-size: 14px;
+        color: #2f3483;
+        margin: 5px 0 5px 0;
+    }
+
+    textarea {
+        font-family: Roboto;
+        font-size: 14px;
+        color: grey;
+        font-weight: 300;
+        width: 98%;
+    }
+    
+    input {
+        margin: 0 0 10px 0;
+        padding : 0;
+        font-family: Roboto;
+        font-size: 14px;
+        font-weight: 300;
+        color: grey;
+        width: 98%;
+    }
+
+}
