--- a/src/styles/_Reservations.scss
+++ b/src/styles/_Reservations.scss
@@ -40,12 +40,18 @@
 }
 
 .alert {
+    position: absolute;
+    z-index:0;
     font-family: 'Orbitron', sans-serif;
+    background-color: whitesmoke;
+    padding: 40px;
+    height: 80px;
     align-items: center;
-    font-size: 1.3em;
-    margin: 0;
-    padding-top: 1.5%;
+    font-size: 1em;
     text-transform: uppercase;
     letter-spacing: 0.3rem;
+    line-height: 22px;
+    text-align: center;
     color: #53aeaf;
+    
 }
