--- a/src/styles/_Homepage.scss
+++ b/src/styles/_Homepage.scss
@@ -87,46 +87,82 @@
 
 .cat-flex {
     display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: space-around;
-    align-items: center;
+	flex-direction: row;
+	flex-wrap: wrap;
+	justify-content: center;
 }
 
 .cat-box {
 	font-family: 'Orbitron', sans-serif;
 	margin-bottom: 1%;
-	background-color:#22bed6;
-    letter-spacing: 0.2rem;
-    font-size:1em;
+	letter-spacing: 0.2rem;
+	font-size: 18px;
 	color: #ffffff;
 	text-transform: uppercase;
-	text-align: end;
-	line-height: 16vh;
 	text-decoration: none;
-    background-size: contain;
+	vertical-align: sub;
+    background-size: cover;
     background-repeat: no-repeat;
 	border-radius: 16px;
-	width: 100%;
-	height: 15vh;
+	width: 60%;
+	height: 23%;
+
+	p {
+		text-align: center;
+		margin: 0;
+		padding-top: 60%;
+	}
 }
 
-// .cat-1 {
-// 	background-image: url(./images/Outdoor.png);
-// 	padding-right: 18%
-// }
+.cat-1 {
+	background-image: url('./images/outdoor.png');
+	// padding-right: 18%;
+}
 
-// .cat-2 {
-// 	background-image: url(./images/Afterwork.png);
-// 	padding-right: 12%
-// }
+.cat-2 {
+	background-image: url('./images/afterwork.png');
+	// padding-right: 12%;
+}
 
-// .cat-3 {
-// 	background-image: url(./images/Clubbing.png);
-// 	padding-right: 17%
-// }
+.cat-3 {
+	background-image: url('./images/clubbing.png');
+	// padding-right: 17%;
+}
 
-// .cat-4 {
-// 	background-image: url(./images/Live.png);
-// 	padding-right: 26%
-// }
+.cat-4 {
+	background-image: url('./images/live.png');
+	// padding-right: 26%;
+}
+
+@media only screen 
+and (min-device-width : 768px) 
+and (max-device-width : 1024px)
+{
+    .promise {
+		margin-top: 13%;
+		letter-spacing: 0.3rem;
+    	font-size: 2em;
+	}
+
+	.cat-box {
+		background-position: center; 
+		width: 40vw;
+		height: 25vh;
+
+
+		.cat-1 {
+			margin-right: 50%;
+		}
+		.cat-2 {
+			margin-right: 50%;
+		}
+		.cat-3 {
+			margin-right: 50%;
+		}
+		.cat-4 {
+			margin-right: 50%;
+		}
+
+	}
+
+}
