--- a/src/App.css
+++ b/src/App.css
@@ -321,11 +321,11 @@ header {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  justify-content: center; }
+  justify-content: space-around; }
 
 .cat-box {
   font-family: 'Orbitron', sans-serif;
-  margin-bottom: 1%;
+  margin-bottom: 4%;
   letter-spacing: 0.2rem;
   font-size: 18px;
   color: #ffffff;
@@ -360,17 +360,8 @@ header {
     letter-spacing: 0.3rem;
     font-size: 2em; }
   .cat-box {
-    background-position: center;
-    width: 40vw;
-    height: 25vh; }
-    .cat-box .cat-1 {
-      margin-right: 50%; }
-    .cat-box .cat-2 {
-      margin-right: 50%; }
-    .cat-box .cat-3 {
-      margin-right: 50%; }
-    .cat-box .cat-4 {
-      margin-right: 50%; } }
+    width: 45%;
+    font-size: 26px; } }
 
 .each-box {
   background-color: whitesmoke;
