--- a/src/styles/_Homepage.scss
+++ b/src/styles/_Homepage.scss
@@ -2,7 +2,6 @@
 .promise {
     background-image: url(https://i.imgur.com/kZn7d4b.jpg);
 	background-size: 100% auto;
-	top: 0;
 	font-weight: 300;
 	margin-top: 23%;
 	height: 20%;
@@ -31,7 +30,6 @@
 	-ms-animation: vertical 12.5s linear infinite 0s;
 	-webkit-animation: vertical 12.5s linear infinite 0s;
 	opacity: 0;
-    overflow: hidden;
 	position: absolute;
 	align-content: center;
 }
@@ -130,9 +128,7 @@
 	background-image: url('./images/live.png');
 }
 
-@media only screen 
-and (min-device-width : 768px) 
-and (max-device-width : 1024px)
+@media(min-device-width : 641px) 
 {
     .promise {
 		margin-top: 13%;
@@ -145,4 +141,19 @@ and (max-device-width : 1024px)
 		font-size: 26px;
 	}
 
+}
+
+@media (min-width:1025px) {
+
+    .promise {
+		margin-top: 9%;
+		padding: 7% 0 6% 0;
+		line-height: 15%;
+		font-size: 3em;
+	}
+
+	.cat-box {
+		width: 45%;
+		font-size: 60px;
+	}
 }
